<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.vladooha.msg_myownwork.RegistrationActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/message_text_reg"
            android:text="@string/registration_alert"
            android:textColor="@color/redBackground"
            android:textSize="25dp"
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"/>

        <LinearLayout
            android:id="@+id/column_datastr"
            android:layout_below="@id/message_text_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/message_text_reg"
            android:gravity="end"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/line_nickname_reg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nickname" />

                <EditText
                    android:id="@+id/nickname_reg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textEmailAddress" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/line_login_reg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login" />

                <EditText
                    android:id="@+id/login_reg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/line_password_reg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password" />

                <EditText
                    android:id="@+id/password_reg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/message_birthday_reg"
            android:layout_below="@id/column_datastr"
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/birthday" />

        </LinearLayout>

        <GridLayout
            android:id="@+id/line_birthday_reg"
            android:layout_below="@id/message_birthday_reg"
            android:layout_alignLeft="@id/message_text_reg"
            android:layout_alignRight="@id/message_text_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:rowCount="2">

            <TextView
                android:id="@+id/bday_reg_text"
                android:maxLines="1"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_gravity="center"
                android:text="@string/day_short" />

            <TextView
                android:id="@+id/bmonth_reg_text"
                android:maxLines="1"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_gravity="center"
                android:text="@string/month_short" />

            <TextView
                android:id="@+id/byear_reg_text"
                android:maxLines="1"
                android:layout_row="0"
                android:layout_column="2"
                android:layout_gravity="center"
                android:text="@string/year_short" />


            <Spinner
                android:id="@+id/bday_reg"
                android:layout_row="1"
                android:layout_column="0"
                android:spinnerMode="dialog"/>

            <Spinner
                android:id="@+id/bmonth_reg"
                android:layout_row="1"
                android:layout_column="1"
                android:spinnerMode="dialog"/>

            <Spinner
                android:id="@+id/byear_reg"
                android:layout_row="1"
                android:layout_column="2"
                android:spinnerMode="dialog"/>

        </GridLayout>

        <LinearLayout
            android:layout_below="@id/line_birthday_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <Button
                android:id="@+id/sign_up_reg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"/>

        </LinearLayout>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
