<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/user_page_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <ImageView
        android:id="@+id/user_page_avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@mipmap/ic_account_circle_white_36dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/user_page_avatar"
        android:orientation="vertical">

        <TextView
            android:id="@+id/user_page_nick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unknown_user"
            android:textSize="24dp"/>

        <TextView
            android:id="@+id/user_page_birth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birth_absent"
            android:textSize="16dp"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/user_page_underline"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/user_page_avatar"
        android:layout_margin="5dp"
        android:background="@color/colorUnderline"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_page_avatar"
        android:layout_margin="8dp"
        android:background="@color/redBackground"
        android:text="@string/user_page_startdialog"
        android:textSize="12dp"/>

</RelativeLayout>